完成了测试结束后发送测试结果邮件的功能

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,17 @@
 [pytest]
-
+# Api服务器配置
 # 何时发送，always: 总是发送，on_fail: 失败时发送
 send_when = on_fail
-
 # 发送API地址
 send_api = https://baidu.com
+
+# 邮箱服务器配置
+smtp_server = smtp.163.com
+# 端口
+smtp_port = 465
+# 发送邮箱的用户
+email_user = 18320429962@163.com
+# 邮箱授权码
+email_password = YZjjD7hcjVjdKt6v
+# 接收者邮箱
+receiver_emails = 2922619461@qq.com
