--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Your Name", email = "your.email@example.com"},
 ]
-dependencies = ["pytest>=8.3.5", "requests>=2.32.3", "charset-normalizer>=3.4.2"]
+dependencies = ["pytest>=8.3.5", "requests>=2.32.3", "charset-normalizer>=3.4.2", "black>=24.8.0"]
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
