--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -7,23 +7,24 @@ on:
 
 jobs:
   build-publish:
-    name: Build and publish Python distributions to PyPI
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      - name: Install pypa/build
-        run: python -m pip install build --user
+      - name: Install build tools
+        run: python -m pip install build twine
 
-      - name: Build a binary wheel and a source tarball
+      - name: Build package
         run: python -m build --wheel --outdir dist/
 
-      - name: Publish distribution to PyPI
-        if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@v1.8.0
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          repository-url: https://upload.pypi.org/legacy/
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
