修改auction，修改包名防止项目名字冲突

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pytest-result-sender"
+name = "pytest-result-sender-jms"
 version = "0.1.4"
 description = "Default template for PDM package"
 authors = [
